--- a/_posts/2021-10-11-hiring.md
+++ b/_posts/2021-10-11-hiring.md
@@ -4,4 +4,4 @@ title: "Hiring! A PhD student and two Postdocs!"
 date: 2021-10-11
 ---
 
-I'm looking for a [PhD student](https://www.uva.nl/shared-content/uva/en/vacancies/2021/10/21-804-phd-position-on-latent-multimodal-concept-analysis.html) and [two Postdocs](https://www.uva.nl/shared-content/uva/en/vacancies/2021/10/21-801-two-postdoctoral-researchers-on-multimedia-analytics-and-computer-vision.html), if you're interested in Computer Vision, Multimedia, and AI, or the role that these play in the analysis of culture and media in general please take a look and see if they're a good fit for you!
+I'm looking for a [PhD student](https://vacatures.uva.nl/UvA/job/PhD-Position-on-Latent-Multimodal-Concept-Analysis/735696702/) and [two Postdocs](https://vacatures.uva.nl/UvA/job/Postdoctoral-Researchers-on-Multimedia-Analytics-and-Computer-Vision/735702702/), if you're interested in Computer Vision, Multimedia, and AI, or the role that these play in the analysis of culture and media in general please take a look and see if they're a good fit for you!
