--- a/_posts/2025-01-28-Art.md
+++ b/_posts/2025-01-28-Art.md
@@ -5,4 +5,4 @@ date: 2025-01-28 9:00:00 +0000
 
 ---
 
-In the coming two years I will be working with Christian Oleson and the EYE museum on a project on AI, Sustainability, and Film Archives funded by [NWO under the NWA art route](https://www.nwo.nl/en/calls/nwa-innovative-projects-within-routes).
+In the coming two years I will be working with [Christian Olesen](https://www.uva.nl/profiel/o/l/c.g.olesen/c.g.olesen.html) and the [EYE museum](https://www.eyefilm.nl/en) on a project on AI, Sustainability, and Film Archives funded by [NWO under the NWA art route](https://www.nwo.nl/en/calls/nwa-innovative-projects-within-routes).
