--- a/_posts/2025-04-24-hiring.md
+++ b/_posts/2025-04-24-hiring.md
@@ -5,7 +5,7 @@ date: 2025-04-24 17:00:00 +0000
 
 ---
 
-I'm currently hiring one [Postdoc researcher](https://werkenbij.uva.nl/en/vacancies/postdoc-on-visual-imaginaries-of-gender-in-generative-ai-netherlands-14009) and a [PhD candidate](https://werkenbij.uva.nl/en/vacancies/phd-position-on-cultural-bias-in-multimodal-ai-netherlands-13972).
+<del>I'm currently hiring one Postdoc researcher and a PhD candidate.</del> These vacancies are closed - I hope to be able to post related positions in the near(ish) future!
 
 The postdoc position is in the [Visual Imaginaries of Gender](https://rdt.uva.nl/research/research-projects/visual-imaginaries-of-gender-the-potentials-and-limitations-of-genai/visual-imaginaries-of-gender-the-potentials-and-limitations-of-genai.html) project, together with a fantastic team of collaborators. This position is for 2 years, additional information on the position and how to apply can be found here: <https://werkenbij.uva.nl/en/vacancies/postdoc-on-visual-imaginaries-of-gender-in-generative-ai-netherlands-14009>
 
